[metadata]
license_file = LICENSE
name = depht
version = 1.0.3
author = Christian Gauthier
author_email = chg60@pitt.edu
description = Discovery and Extraction of Phages Tool
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/chg60/DEPhT
project_urls =
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =
    biopython~=1.79
    bitarray~=2.0.0
    bokeh~=2.2.2
    dna-features-viewer~=3.0.3
    kaleido~=0.2.1
    matplotlib~=3.4.1
    numpy~=1.20.2
    pandas~=1.2.4
    pretty-html-table~=0.9.10
    plotly~=5.1.0
    scipy~=1.7.0

[options.packages.find]
where = src
include = depht
          depht.classes
          depht.functions
          depht_utils
          depht_utils.classes
          depht_utils.data
          depht_utils.functions
          depht_utils.pipelines

exclude =

[options.entry_points]
console_scripts =
    depht = depht.__main__:main
    depht-train = depht_utils.__main__:main
