[metadata]
license_files = file:LICENSE
name = depht
version = 1.2.2
author = Christian Gauthier
author_email = chg60@pitt.edu
description = Discovery and Extraction of Phages Tool
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/chg60/DEPhT
project_urls =
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find:
install_requires =
    biopython>=1.78
    bitarray~=2.0.1
    bokeh~=2.4.2
    dna-features-viewer~=3.1.0
    kaleido~=0.2.1
    matplotlib~=3.4.1
    numpy~=1.22.3
    pandas~=1.4.2
    phamclust~=0.1.2
    plotly~=5.1.0
    pretty-html-table~=0.9.10
    requests>=2.26.0

[options.packages.find]
where = src
include = depht
          depht.classes
          depht.functions
          depht.fetch_model
          depht_train
          depht_train.classes
          depht_train.functions
          depht_train.pipelines

exclude =

[options.entry_points]
console_scripts =
    depht = depht.__main__:main
    depht_train = depht_train.run:main
    depht_fetch_model = depht.fetch_model:main
